--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
       </div>
     </div>
 
+    <!-- No.5 -->
+    <div class="form-group mt-5 ml-5">
+      <button id="btnsoChan" class="btn btn-primary rounded-pill p-2 ml-2">Tìm số chẵn cuối cùng</button>
+      <div class="alert alert-primary p-4 w-25 mt-4">
+        Kết quả: <span id="spansoChan"></span> 
+      </div>
+    </div>
+
 
 
     <!-- Optional JavaScript -->
