--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2>Bài tập chính</h2>
     </div>
 
-    <div class="form-group mt-5 ml-5">
+    <div class="form-group mt-5 mb-5 ml-5">
       <label class="font-weight-bold text-danger">Nhập mảng số nguyên:</label> <br>
       <input type="number" id="nhapSo" class="rounded p-2 mt-1 w-25" placeholder="">
       <button id="btnNhapSo" class="btn btn-warning rounded-pill p-2 ml-2">Hiển thị</button>
@@ -26,7 +26,8 @@
     </div>
 
     <!-- No.1 -->
-    <div class="form-group mt-5 ml-5">
+    <h3>Bài 1</h3>
+    <div class="form-group mt-3 mb-5 ml-5">
       <button id="btnTinhTong" class="btn btn-primary rounded-pill p-2 ml-2">Tính tổng số dương</button>
       <div class="alert alert-primary p-4 w-25 mt-4">
         Kết quả: <span id="spanTinhTong"></span> 
@@ -34,34 +35,91 @@
     </div>
 
     <!-- No.2 -->
-    <div class="form-group mt-5 ml-5">
-      <button id="btnDemSo" class="btn btn-primary rounded-pill p-2 ml-2">Đếm số dương</button>
-      <div class="alert alert-primary p-4 w-25 mt-4">
+    <h3>Bài 2</h3>
+    <div class="form-group mt-3 mb-5 ml-5">
+      <button id="btnDemSo" class="btn btn-success rounded-pill p-2 ml-2">Đếm số dương</button>
+      <div class="alert alert-success p-4 w-25 mt-4">
         Kết quả: <span id="spanDemSo"></span> 
       </div>
     </div>
 
     <!-- No.3 -->
-    <div class="form-group mt-5 ml-5">
-      <button id="btnMin" class="btn btn-primary rounded-pill p-2 ml-2">Tìm số nhỏ nhất</button>
-      <div class="alert alert-primary p-4 w-25 mt-4">
+    <h3>Bài 3</h3>
+    <div class="form-group mt-3 mb-5 ml-5">
+      <button id="btnMin" class="btn btn-info rounded-pill p-2 ml-2">Tìm số nhỏ nhất</button>
+      <div class="alert alert-info p-4 w-25 mt-4">
         Kết quả: <span id="spanMin"></span> 
       </div>
     </div>
 
     <!-- No.4 -->
-    <div class="form-group mt-5 ml-5">
-      <button id="btnMinDuong" class="btn btn-primary rounded-pill p-2 ml-2">Tìm số dương nhỏ nhất</button>
-      <div class="alert alert-primary p-4 w-25 mt-4">
+    <h3>Bài 4</h3>
+    <div class="form-group mt-3 mb-5 ml-5">
+      <button id="btnMinDuong" class="btn btn-warning rounded-pill p-2 ml-2">Tìm số dương nhỏ nhất</button>
+      <div class="alert alert-warning p-4 w-25 mt-4">
         Kết quả: <span id="spanMinDuong"></span> 
       </div>
     </div>
 
     <!-- No.5 -->
-    <div class="form-group mt-5 ml-5">
-      <button id="btnsoChan" class="btn btn-primary rounded-pill p-2 ml-2">Tìm số chẵn cuối cùng</button>
-      <div class="alert alert-primary p-4 w-25 mt-4">
+    <h3>Bài 5</h3>
+    <div class="form-group mt-3 mb-5 ml-5">
+      <button id="btnsoChan" class="btn btn-danger rounded-pill p-2 ml-2">Tìm số chẵn cuối cùng</button>
+      <div class="alert alert-danger p-4 w-25 mt-4">
         Kết quả: <span id="spansoChan"></span> 
+      </div>
+    </div>
+
+    <!-- No.6 -->
+    <h3>Bài 6</h3>
+    <div class="form-group mt-3 mb-5 ml-5">
+      <input type="number" id="ipDoiCho1" class="rounded p-2 mt-1 w-25" placeholder="Nhập vào số vị trí 1">
+      <input type="number" id="ipDoiCho2" class="rounded p-2 mt-1 w-25" placeholder="Nhập vào số vị trí 2">
+      <button id="btnDoiCho" class="btn btn-dark rounded-pill p-2 ml-2">Đổi chỗ</button>
+      <div class="alert alert-dark p-4 w-25 mt-4">
+        Kết quả: <span id="spanDoiCho"></span> 
+      </div>
+    </div>
+
+    <!-- No.7 -->
+    <h3>Bài 7</h3>
+    <div class="form-group mt-3 mb-5 ml-5">
+      <button id="btnTangDan" class="btn btn-success rounded-pill p-2 ml-2">Sắp xếp tăng dần</button>
+      <div class="alert alert-secondary p-4 w-25 mt-4">
+        Kết quả: <span id="spanTangDan"></span> 
+      </div>
+    </div>
+
+    <!-- No.8 -->
+    <h3>Bài 8</h3>
+    <div class="form-group mt-3 mb-5 ml-5">
+      <button id="btnNguyenTo" class="btn btn-primary rounded-pill p-2 ml-2">Tìm số</button>
+      <div class="alert alert-primary p-4 w-25 mt-4">
+        Số nguyên tố đầu tiên là: <span id="spanNguyenTo"></span> 
+      </div>
+    </div>
+
+    <!-- No.9 -->
+    <h3>Bài 9</h3>
+    <div class="form-group mt-3 mb-5 ml-5">
+      <label class="font-weight-bold text-danger">Nhập mảng số :</label> <br>
+      <input type="number" id="nhapSoThuc" class="rounded p-2 mt-1 w-25" placeholder="">
+      <button id="btnNhapSoThuc" class="btn btn-warning rounded-pill p-2 ml-2">Hiển thị</button>
+      <div id="" class="alert alert-warning p-4 w-25 mt-4">
+        Mảng số : <span id="spanNhapSoThuc"></span> 
+      </div>
+      <button id="btnDemSoNguyen" class="btn btn-warning rounded-pill p-2 ml-2">Đếm số nguyên</button>
+      <div id="" class="alert alert-warning p-4 w-25 mt-4">
+        Kết quả : <span id="spanDemSoNguyen"></span> 
+      </div>
+    </div>
+
+    <!-- No.10 -->
+    <h3>Bài 10</h3>
+    <div class="form-group mt-3 mb-5 ml-5">
+      <button id="btnSoSanh" class="btn btn-success rounded-pill p-2 ml-2">So sánh</button>
+      <div class="alert alert-secondary p-4 w-25 mt-4">
+        Kết quả: <span id="spanSoSanh"></span> 
       </div>
     </div>
 
